# alimer

./: .editorconfig  .gitattributes  .gitignore  Alimer.MultiTargeting.targets  Alimer.Native.targets  Alimer.sln  Alimer.slnx  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  NuGet.Config  NuGet.config  README.md  TODO.md  Vortice.sln  global.json  nuget.config  version.json
Source/Alimer/: Alimer.h  AlimerConfig.h.in  Application.cpp  Application.h  CMakeLists.txt  EntryPoint.h  Input.cpp  Input.h  PlatformDef.h  pch.h
Source/Alimer/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetRef.cpp  AssetRef.h  Image.cpp  Image.h  JsonFile.cpp  JsonFile.h  JsonValue.cpp  JsonValue.h
Source/Alimer/Audio/: Audio.cpp  Audio.h  AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h  Types.h
Source/Alimer/Audio/Components/: AudioListenerComponent.cpp  AudioListenerComponent.h  AudioSourceComponent.cpp  AudioSourceComponent.h
Source/Alimer/Core/: Assert.cpp  Assert.h  Base.h  BitOperations.cpp  BitOperations.h  Containers.h  Hash.h  JobSystem.cpp  JobSystem.h  JsonValue.cpp  JsonValue.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Module.h  NativeMemory.cpp  NativeMemory.h  Object.cpp  Object.h  ObjectResolver.cpp  ObjectResolver.h  PixelFormat.cpp  PixelFormat.h  Property.cpp  Property.h  RefCounted.cpp  RefCounted.h  Serializable.cpp  Serializable.h  SerializeValue.cpp  SerializeValue.h  Signal.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  StringId.cpp  StringId.h  System.h  (+13 more)
Source/Alimer/IO/: Compression.cpp  Compression.h  FileSystem.cpp  FileSystem.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h  Types.h
Source/Alimer/Math/: BoundingBox.cpp  BoundingBox.h  BoundingFrustum.cpp  BoundingFrustum.h  BoundingSphere.cpp  BoundingSphere.h  Color.cpp  Color.h  MathHelper.cpp  MathHelper.h  Matrix3x2.cpp  Matrix3x2.h  Matrix4x4.cpp  Matrix4x4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  SIMD.cpp  SIMD.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Alimer/Physics/: Physics.cpp  Physics.h  PhysicsTypes.h  Types.h
Source/Alimer/Physics/Components/: CollisionShapeComponent.cpp  CollisionShapeComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Alimer/Physics/Jolt/: JoltPhysicsBackend.cpp  JoltPhysicsBackend.h
Source/Alimer/Platform/: AppPlatform.cpp  AppPlatform.h  Clipboard.h  DynamicLibrary.cpp  DynamicLibrary.h  Platform.cpp  Platform.h  Types.h  Window.cpp  Window.h
Source/Alimer/Platform/SDL/: AppPlatform.SDL.cpp  Application.SDL.cpp  Clipboard.SDL.cpp  Input.SDL.cpp  Window.SDL.cpp  Window.SDL.h
Source/Alimer/Platform/Win32/: WindowsPlatform.cpp  WindowsPlatform.h
Source/Alimer/Private/: rapidjson_wrapper.h
Source/Alimer/RHI/: RHI.cpp  RHI.h
Source/Alimer/RHI/D3D12/: RHI_D3D12.cpp
Source/Alimer/RHI/Metal/: RHI_Metal.cpp
Source/Alimer/RHI/Vulkan/: RHI_Vulkan.cpp  RHI_Vulkan_Funcs.h
Source/Alimer/Renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Types.h
Source/Alimer/Scene/: Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSystem.cpp  SceneSystem.h  SceneTypes.h
Source/Alimer/Serialization/: BinarySerializer.cpp  BinarySerializer.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h  Types.h  rapidjson_wrapper.h
Source/Alimer/Shaders/: ShaderDefinitions.h
Source/Engine/: Alimer.h  AlimerConfig.h.in  Application.cpp  Application.h  CMakeLists.txt  PlatformDef.h  PlatformInclude.h  Window.cpp  Window.h  alimer.natvis
Source/Engine/Assets/: Asset.cpp  Asset.h  AssetRef.cpp  AssetRef.h
Source/Engine/Core/: Assert.cpp  Assert.h  CommandLine.cpp  CommandLine.h  Log.cpp  Log.h  Module.h  Object.cpp  Object.h  RefCount.cpp  RefCount.h  Signal.h  StringId.cpp  StringId.h  StringUtils.cpp  StringUtils.h  Types.h
Source/Engine/Graphics/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  GPUResource.cpp  GPUResource.h  Graphics.cpp  Graphics.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsDefs.cpp  GraphicsDefs.h  GraphicsResource.h  Pipeline.cpp  Pipeline.h  PixelFormat.cpp  PixelFormat.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Types.cpp  Types.h
Source/Engine/IO/: MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h
Source/Engine/Math/: Color.cpp  Color.h  MathHelper.h  Matrix.cpp  Matrix.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  Viewport.cpp  Viewport.h
Source/Engine/Platform/: Window.cpp  Window.h
Source/Engine/Private/: GraphicsBackend.h  GraphicsBackend_Vulkan.h  Graphics_D3D11.cpp  Graphics_Vulkan.cpp  Platform_GLFW.cpp
Source/Engine/RHI/: RHI.cpp  RHI.h  RHI_D3D11.cpp  RHI_D3D11.h  RHI_D3D12.cpp  RHI_D3D12.h  RHI_Vulkan.cpp  RHI_Vulkan.h
Source/Engine/shaders/: common.hlsli  types.h
Source/RHI/: CMakeLists.txt  RHI.cpp  RHI.h  RHI_D3D12.cpp  RHI_D3D12.h  RHI_Vulkan.cpp  RHI_Vulkan.h
Source/Samples/: CMakeLists.txt
Source/Samples/01_HelloWorld/: HelloWorld.cpp
Source/Samples/DrawTriangle/: main.cpp
Source/Samples/RHISamples/: App.cpp  DrawIndexedQuad.cpp  DrawIndexedQuad.h  DrawSpinningCube.cpp  DrawSpinningCube.h  DrawTexturedCubeSample.cpp  DrawTexturedCubeSample.h  DrawTriangle.cpp  DrawTriangle.h  Sample.cpp  Sample.h
Source/Tools/ShaderMake/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ThirdPartyLicenses.txt
src/native/: CMakeLists.txt  README.md  cmake_emscripten.bat  cmake_vs2022_clang.bat  cmake_vs2022_x64.bat  cmake_vs2026_win_x64_clang.bat  cmake_vs2026_x64.bat
src/native/alimer_image/: CMakeLists.txt  alimer_image.c  alimer_image.h
src/native/engine/: CMakeLists.txt
src/native/gpu/: CMakeLists.txt
src/native/physics/: CMakeLists.txt
src/native/samples/: CMakeLists.txt
(+1585 files in other folders)
